deployment/openshift/caddy-deployment.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: caddy-andrea
  labels:
    app: caddy-andrea
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: caddy-andrea
    spec:
      containers:
      - name: caddy-andrea
        image: 172.30.80.255:5000/andrea/caddy
        ports:
        - containerPort: 3000
