deployment/openshift/caddy-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-andrea-service
  labels:
    app: caddy-andrea
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: caddy-andrea
