deployment/openshift/caddy-route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: caddy-andrea-route
  labels:
    app: caddy-andrea
spec:
  to:
    kind: Service
    name: caddy-andrea-service
  tls:
    termination: edge
